# minicc

./: README.md  pyproject.toml  test_subagents.py
llmdoc/: index.md
llmdoc/architecture/: modules.md
llmdoc/guides/: usage.md
llmdoc/overview/: project.md
minicc/: __init__.py  agent.py  app.py  config.py  schemas.py  tools.py
minicc/prompts/: system.md
minicc/ui/: __init__.py  styles.tcss  widgets.py
